<resources>
    <string name="app_name">scutpaotui</string>
    <string name="app_version">1.0.1bet</string>
    <string name="button_1">登录</string>
    <string name="name">name</string>
    <string name="password">请输入密码</string>
    <string name="name_hint">请输入账号</string>
    <string name="password_hint">请输入密码</string>
    <string name="button2">Button</string>
    <string name="textview2">TextView</string>
    <string name="message">this is walden</string>
    <string name="logoText">跑腿，我们是认真的！</string>
    <string name="smalllogo">logo</string>
    <string name="setting">设置</string>
    <string name="head_picture">head_picture</string>
    <string name="history">histroy</string>
    <string name="back">back</string>
    <string name="todo">TODO</string>
    <string name="log_out">退出登录</string>
    <string name="history_head">交易记录</string>
    <string name="register">注册</string>
    <string name="Register">点击注册</string>
    <string name="confirm_register">注册</string>
    <string name="register_title">注册用户</string>
    <string name="register_name_hint">请输入用户名</string>
    <string name="register_password_hint">输入密码</string>
    <string name="confirm_password_hint">确认密码</string>
    <string name="phone_hint">手机号码</string>
    <string name="autocode_hint">验证码</string>
    <string name="register_auth">发送验证码</string>
    <string name="login_name_hint">请输入用户名或手机号</string>
    <string name="hint_login">请输入用户名</string>
    <string name="nav">跑 腿</string>
    <string name="setting_title">设 置</string>
    <string name="history_title">交易记录</string>
    <string name="register_tolog">去登录</string>
    <string name="tologin">点击登录</string>
</resources>